# Chessboard_Cornerdetection

./: CMakeLists.txt  Readme.md  setup.py
python_utils/: image_paths.py
src/: Chessboard.cpp  Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h  chessBoardCornersDetector.cpp  chessBoardCornersDetector_pybind.cpp  test_chessboard.cpp
